@@ -40,31 +40,31 @@
 )
 
 (define eval-guile-scm
-  (lambda (board-handle)
+  (lambda (board-handle mat-handle pawn-handle mul-handle)
     (begin 
-      (define material-handle (material-get-info board-handle))
-      (define mo (material-get-info-opening material-handle))
-      (define me (material-get-info-endgame material-handle))
-      (define mul-handle (material-get-mul material-handle)) 
+      (define eval-result 0)
+      (define dummy-result-1 (material-get-info board-handle mat-handle))
+      (define mo (material-get-info-opening mat-handle))
+      (define me (material-get-info-endgame mat-handle))
+      (define dummy-result-2 (material-get-mul mat-handle mul-handle)) 
       (define bo (board-get-opening board-handle))
       (define be (board-get-endgame board-handle))
-      (define pawn-handle (pawn-get-info board-handle))
+      (define dummy-result-3 (pawn-get-info board-handle pawn-handle))
       (define po (pawn-get-opening pawn-handle))
       (define pe (pawn-get-endgame pawn-handle))
       (define o (+ mo bo po))
       (define e (+ me be pe))
       (define mul-white 0)
       (define mul-black 0)
-      (define mat-mul-white (material-get-mul-white material-handle))
-      (define mat-mul-black (material-get-mul-black material-handle))
-      (define phase (get-phase material-handle))
+      (define mat-mul-white (material-get-mul-white mat-handle))
+      (define mat-mul-black (material-get-mul-black mat-handle))
+      (define phase (get-phase mat-handle))
       (define wb (board-get-piece-white board-handle))
       (define bb (board-get-piece-black board-handle))
       (define ValueDraw 0)
       (define ValueMate 30000)
       (define ValueEvalInf (- ValueMate 256))
-      (define eval-result 0)
-      (set! mul-handle (eval-draw board-handle material-handle pawn-handle mul-handle)) 
+      (define dummy-result-4 (eval-draw board-handle mat-handle pawn-handle mul-handle)) 
       (set! mul-white (eval-draw-get-mul-white mul-handle))
       (set! mul-black (eval-draw-get-mul-black mul-handle))
       (if (< mat-mul-white mul-white) (begin (set! mul-white mat-mul-white)))
@@ -72,10 +72,10 @@
       (if (and (= mul-white 0) (= mul-black 0))
         (set! eval-result 0)
         (begin
-          (set! o (eval-piece-get-opening board-handle material-handle pawn-handle o))
-          (set! e (eval-piece-get-endgame board-handle material-handle pawn-handle e))
-          (set! o (eval-king-get-opening board-handle material-handle o))
-          (set! e (eval-king-get-endgame board-handle material-handle e))
+          (set! o (eval-piece-get-opening board-handle mat-handle pawn-handle o))
+          (set! e (eval-piece-get-endgame board-handle mat-handle pawn-handle e))
+          (set! o (eval-king-get-opening board-handle mat-handle o))
+          (set! e (eval-king-get-endgame board-handle mat-handle e))
           (set! o (eval-passer-get-opening board-handle pawn-handle o))
           (set! e (eval-passer-get-endgame board-handle pawn-handle e))
           (set! o (eval-pattern-get-opening board-handle o))
@@ -94,7 +94,7 @@
                               256
                             )
           )
-          (if (is-set-draw-bishop-flag material-handle)
+          (if (is-set-draw-bishop-flag mat-handle)
             (begin
               (if (not (= (square-colour wb) (square-colour bb)))
                 (begin
@@ -121,7 +121,8 @@
 )
 
 (define eval-guile
-  (lambda (board-handle)
-    (begin (eval-guile-scm board-handle))
+  (lambda (board-handle mat-handle pawn-handle mul-handle)
+    ;(begin (eval-guile-c board-handle))
+    (begin (eval-guile-scm board-handle mat-handle pawn-handle mul-handle))
   )
 )
